# SSAGES_GROMACS_Modernized

./: CMakeLists.txt  CUDA_GCC_COMPATIBILITY.md  DISTRIBUTION-README.md  GPU_PERFORMANCE_ANALYSIS.md  GPU_UMBRELLA_SAMPLING.md  GROMACS_SETUP.md  MODERN-GROMACS-PATCH.md  NEW USER INSTRUCTIONS  SSAGES-modern-GROMACS-support.patch  benchmark_cpu.json  benchmark_gpu.json  gpu_benchmark  gpu_benchmark.cpp  install-modern-gromacs-support.sh  test_gpu.json  test_meta_gpu.json  test_standard.json
cmake/Modules/: FindGROMACS.cmake
hooks/gromacs/: CMakeLists.txt  Driver.cpp
src/Methods/: Meta.h  MetaGPU.cu  MetaGPU.h  Method.cpp
